# fefu-test

./: .gitignore  pyproject.toml
api/: models.py  science.py  urls.py  views.py
api/migrations/: 0001_initial.py
config/: settings.py  urls.py
fefu/: apps.py  models.py
