[tool.poetry]
name = "fefu"
version = "0.1.0"
description = ""
authors = ["Vsevolod Bazhan <vsevozhan@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
